--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "bootstrap-vue": "^2.0.0-rc.11",
+    "bourbon": "^5.1.0",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vue-video-background": "^0.1.2",
-    "vue-videobg": "^2.0.0"
+    "vue-videobg": "^2.0.0",
+    "vue-youtube": "^1.2.5"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
